fix spacing on desktop

--- a/carbonmark-data/components/pages/PageWithTabs/styles.module.scss
+++ b/carbonmark-data/components/pages/PageWithTabs/styles.module.scss
@@ -49,7 +49,6 @@
     top: 0;
     right: 0;
     justify-content: end;
-    gap: 2rem;
     margin-top: 1rem;
   }
 }
@@ -64,6 +63,12 @@
   }
   &:nth-child(3) {
     grid-area: three;
+  }
+
+  @include desktopLarge {
+    &:not(:first-child) {
+      margin-left: 2rem;
+    }
   }
 }
 
